# propuestas

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/application/dto/: schemas.py
backend/src/application/ports/: document_services.py
backend/src/application/use_cases/: documents.py  pdf_documents.py  quotations.py
backend/src/domain/entities/: enums.py  models.py
backend/src/infrastructure/: security.py
backend/src/infrastructure/database/: init_db.py  models.py  session.py
backend/src/infrastructure/email/: smtp_service.py
backend/src/infrastructure/ocr/: tesseract_service.py
backend/src/infrastructure/pdf/: reportlab_service.py
backend/src/infrastructure/repositories/: document_repository.py
backend/src/presentation/api/dependencies/: security.py
backend/src/presentation/api/routes/: __init__.py  auth.py  clients.py  companies.py  document_repository.py  documents.py  exports.py  notifications.py  pdfs.py  quotations.py  redis_client.py  shipments.py
backend/src/shared/config/: settings.py
backend/tests/: conftest.py  test_auth_api.py  test_clients_api.py  test_companies_api.py  test_document_services.py  test_documents_api.py  test_exports_api.py  test_quotations_api.py  test_quotations_use_cases.py  test_shipments_api.py
docs/: API_REST.md  ARCHITECTURE.md  DATABASE_MODEL.md  REQUIREMENTS.md  ROADMAP.md  UML.md
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: mock-data.ts
(+8 files in other folders)
